# commandcenter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
assets/images/: README.md
desktop/: dev.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  python_bridge.rs
desktop/ui/: eslint.config.js  force-reload.html  index.html  package-lock.json  package.json  vite.config.ts
desktop/ui/src/: App.tsx  main.tsx
docs/: TECHNICAL_DOCUMENTATION.md
docs/chapters/: 01-executive-summary.md  02-system-overview.md  03-architecture-design-philosophy.md  04-data-pipeline-architecture.md  05-database-schema-design.md  06-time-handling-utc-conversion.md  07-incremental-update-mechanism.md  08-deduplication-strategy.md  09-aggregation-layer.md  10-visualization-system.md  11-api-reference.md  12-performance-characteristics.md  13-security-data-privacy.md  14-deployment-configuration.md  15-troubleshooting-guide.md  16-appendices.md  17-conclusion.md  README.md
scripts/: cc_usage.sh  cc_usage_logger.md  cc_usage_logger.py  cc_usage_playwright.js  cc_usage_playwright.js.-depr  cc_usage_web.py
src/command_center/: __init__.py  __main__.py  config.py  tauri_api.py  usage_accounts.py
src/command_center/aggregators/: __init__.py  daily_stats.py  streak_calculator.py
src/command_center/cache/: __init__.py  file_tracker.py  incremental_update.py
src/command_center/cli/: __init__.py  (+1 more)
src/commandcenter/: __init__.py  __main__.py  config.py
tests/: test_project_helpers.py
(+92 files in other folders)
