[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commandcenter"
version = "2.1.0"
description = "Claude Code Usage Reports - Modern SQLite-based analytics"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "rich>=13.0.0",
]

[project.scripts]
commandcenter = "commandcenter.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/commandcenter"]
